// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource document DELETE /users/:_sid should return 200 1`] = `
Array [
  "ok",
  "n",
]
`;

exports[`Resource document DELETE /users/:_sid should return 200 2`] = `
Object {
  "n": 1,
  "ok": 1,
}
`;

exports[`Resource document GET /users/:_sid should return 200 1`] = `
Array [
  "_id",
  "firstName",
  "lastName",
  "email",
  "_sid",
]
`;

exports[`Resource document GET /users/:_sid should return 200 2`] = `
Object {
  "email": "john.doe@gmail.com",
  "firstName": "John",
  "lastName": "Doe",
}
`;

exports[`Resource document PATCH /users/:_sid should return 200 1`] = `
Array [
  "_id",
  "firstName",
  "lastName",
  "email",
  "_sid",
]
`;

exports[`Resource document PATCH /users/:_sid should return 200 2`] = `
Object {
  "email": "john.doe@gmail.com",
  "firstName": "Laura",
  "lastName": "Doe",
}
`;
